--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "fetch-sparql-endpoint": "^1.9.0",
+    "gaxios": "^4.1.0",
+    "jsonld": "^3.2.0",
+    "net": "^1.0.2",
+    "nuxt": "^2.14.6",
+    "tls": "^0.0.1",
+    "vue-d3-network": "^0.1.28"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
