--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "linked-read",
   "version": "1.0.0",
   "private": true,
+  "keywords": [
+    "linked-data",
+    "open-data",
+    "sparql",
+    "rdf",
+    "nuxtjs",
+    "javascript",
+    "visualization"
+  ],
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
