--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.2.1",
     "core-js": "^3.6.5",
     "fetch-sparql-endpoint": "^1.9.0",
     "nuxt": "^2.14.6",
